# muse-psfr

./: .coveragerc  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tests.yml
docs/: conf.py  index.rst
lib/mpdaf/MUSE/: psfrec.py
lib/mpdaf/MUSE/tests/: test_psfrec.py
lib/mpdaf/scripts/: run_psfrec.py
muse_psfr/: __init__.py  cli.py  psfrec.py  test_psfrec.py
psfrec/: __init__.py  __main__.py  coeffL0.fits  psfrec.py  run_psfrec.py  test_psfrec.py
