[metadata]
name = psfrec
description = MUSE WFM-AO PSF reconstruction from SPARTA
long_description = file: README.rst
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
# license = BSD 3-Clause License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.5
setup_requires =
    setuptools_scm
install_requires =
    mpdaf
    astropy
    scipy
    numpy
    joblib

[options.extras_require]
all = matplotlib; colorama

[options.entry_points]
console_scripts =
    psfrec = psfrec.run_psfrec:main

[wheel]
universal = 1

[tool:pytest]
minversion = 3.0.0
# addopts = --doctest-rst
norecursedirs = ".tox" "build" "docs[\/]build"
