[metadata]
name = muse-psfr
description = MUSE WFM-AO PSF reconstruction from SPARTA
long_description = file: README.rst
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.5
setup_requires =
    setuptools_scm
install_requires =
    mpdaf
    astropy
    scipy
    numpy
    joblib

[options.extras_require]
all = matplotlib; colorama
docs = numpydoc; sphinx_rtd_theme; sphinx-automodapi; sphinxcontrib-programoutput; matplotlib

[options.entry_points]
console_scripts =
    muse-psfr = muse_psfr.cli:main

[tool:pytest]
minversion = 3.0.0
# addopts = --doctest-rst
norecursedirs = ".tox" "build" "docs[\/]build"

[isort]
multi_line_output = 3
include_trailing_comma = True
known_third_party=numpy,scipy,astropy,mpdaf,joblib,matplotlib

[flake8]
max-line-length = 88
