[metadata]
name = muse-psfr
description = MUSE WFM-AO PSF reconstruction from SPARTA
long_description = file: README.rst
url = https://github.com/musevlt/muse-psfr
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
license = MIT License
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    mpdaf
    astropy
    scipy
    numpy
    joblib

[options.extras_require]
all = matplotlib; colorama
docs = sphinx_rtd_theme; sphinx-automodapi; sphinxcontrib-programoutput; matplotlib

[options.package_data]
muse_psfr = coeffL0.fits

[options.entry_points]
console_scripts =
    muse-psfr = muse_psfr.cli:main

[tool:pytest]
minversion = 3.0.0
# addopts = --doctest-rst
norecursedirs = ".tox" "build" "docs[\/]build"

[isort]
multi_line_output = 3
include_trailing_comma = True
known_third_party=numpy,scipy,astropy,mpdaf,joblib,matplotlib

[flake8]
max-line-length = 88
